# parametric_analysis_tool

./: CMakeLists.txt  README.md  main.cpp
include/: parametricAnalysis.h
src/: parametric_analysis.cpp
